--- a/exp/TS8210-Juan/TS8210-Juan.yml
+++ b/exp/TS8210-Juan/TS8210-Juan.yml
@@ -8,7 +8,7 @@ experiment:
   script: "src/completo/z921_TS_generico.r"
   restart: FALSE
   name: "exp"
-  requires: [ "TS8210-Juan" ]
+  requires: [ "FE8120-Juan" ]
 
 
 param:
