--- a/exp/FE8120juan1/FE8120juan1.yml
+++ b/exp/FE8120juan1/FE8120juan1.yml
@@ -6,7 +6,7 @@ googlecloud:
 
 experiment:
   script: "src/completo/J912_FE_desborde.r"
-  restart: FALSE
+  restart: TRUE
   name: "exp"
   requires: [ "DT0001" ]
 
